Added the changing of status of the delivery and payment.
